--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
@@ -44,6 +44,8 @@ when(metaClassName){
 
     override var datastore: org.kevoree.modeling.api.persistence.DataStore? = org.kevoree.modeling.api.persistence.MemoryDataStore()
 
+    override dirty : Boolean = false;
+
     protected fun initObject(elem : org.kevoree.modeling.api.persistence.KMFContainerProxy){
         elem.originFactory = this
         monitor(elem)
