--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
@@ -12,7 +12,7 @@ package ${packageName}.factory;
 import $helper.fqn($ctx, $class);
 #end
 
-#if($ctx.persistence) #if(!$ctx.timeAware) open #end #end class Default${formatedFactoryName} : ${formatedFactoryName} #if($ctx.timeAware),org.kevoree.modeling.api.time.TimeAwareKMFFactory,${formatedTimeView} #else #if($ctx.persistence),org.kevoree.modeling.api.persistence.PersistenceKMFFactory #end #end {
+#if($ctx.persistence) #if(!$ctx.timeAware) open #end #end class Default${formatedFactoryName}(#if($ctx.persistence) override val datastore : org.kevoree.modeling.api.persistence.DataStore #end #if($ctx.timeAware), override val sharedCache : org.kevoree.modeling.api.time.blob.SharedCache,override val relativeTime: Long   #end  ) : ${formatedFactoryName} #if($ctx.timeAware),org.kevoree.modeling.api.time.TimeAwareKMFFactory,${formatedTimeView} #else #if($ctx.persistence),org.kevoree.modeling.api.persistence.PersistenceKMFFactory #end #end {
 
 override fun getVersion() : String { return "${modelVersion}" }
 
@@ -20,11 +20,16 @@ override fun getVersion() : String { return "${modelVersion}" }
 override val elem_cache: MutableMap<String, org.kevoree.modeling.api.KMFContainer> = java.util.concurrent.ConcurrentHashMap<String, org.kevoree.modeling.api.KMFContainer>()
 override val modified_elements: MutableMap<String, org.kevoree.modeling.api.KMFContainer> = java.util.concurrent.ConcurrentHashMap<String, org.kevoree.modeling.api.KMFContainer>()
 override val elementsToBeRemoved : MutableSet<String> = java.util.HashSet<String>()
+override var dirty : Boolean = false;
+#end
+
+#if($ctx.timeAware)
+    override var entitiesCache: org.kevoree.modeling.api.time.blob.EntitiesMeta? = null
 #end
 
 #foreach( $class in $classes )
 override fun create${class.getName()}() : $helper.fqn($ctx, $class) {
-val tempElem = ${helper.fqn($ctx, $class.getEPackage())}.impl.${class.getName()}Impl()
+val tempElem = ${helper.fqn($ctx, $class.getEPackage())}.impl.${class.getName()}Impl( #if($ctx.timeAware) relativeTime #end )
     #if($ctx.persistence)
 initObject(tempElem)
     #end
@@ -41,11 +46,6 @@ when(metaClassName){
 }
 
 #if($ctx.persistence)
-
-    override var datastore: org.kevoree.modeling.api.persistence.DataStore? = org.kevoree.modeling.api.persistence.MemoryDataStore()
-
-    override var dirty : Boolean = false;
-
     protected fun initObject(elem : org.kevoree.modeling.api.persistence.KMFContainerProxy){
         elem.originFactory = this
         monitor(elem)
@@ -56,13 +56,6 @@ when(metaClassName){
         (elem as org.kevoree.modeling.api.time.TimeAwareKMFContainer).meta!!.metatype = elem.metaClassName()
         #end
     }
-
-#end
-
-#if($ctx.timeAware)
-override var relativeTime: org.kevoree.modeling.api.time.TimePoint = org.kevoree.modeling.api.time.TimePoint.create("0:0");
-override var entitiesCache: org.kevoree.modeling.api.time.blob.EntitiesMeta? = null
-override var sharedCache : org.kevoree.modeling.api.time.blob.SharedCache = org.kevoree.modeling.api.time.blob.SharedCache()
 #end
 
 #if(!$ctx.persistence)
@@ -89,8 +82,6 @@ override var sharedCache : org.kevoree.modeling.api.time.blob.SharedCache = org.
     }
     #end
 
-
-
     override fun createJSONSerializer(): org.kevoree.modeling.api.json.JSONModelSerializer {
         return org.kevoree.modeling.api.json.JSONModelSerializer()
     }
@@ -111,6 +102,4 @@ override var sharedCache : org.kevoree.modeling.api.time.blob.SharedCache = org.
         return org.kevoree.modeling.api.ModelCloner(this)
     }
 
-
-
-    }
+}
