--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -470,4 +470,17 @@ override fun select(query : String) : List<org.kevoree.modeling.api.KMFContainer
         return traces
     }
 
+
+    override fun visitNotContained(visitor: org.kevoree.modeling.api.util.ModelVisitor){ visit(visitor,false,false,true); }
+
+    override fun visitContained(visitor: org.kevoree.modeling.api.util.ModelVisitor){ visit(visitor,false,true,false); }
+
+    override fun visitReferences(visitor: org.kevoree.modeling.api.util.ModelVisitor){ visit(visitor,false,true,true); }
+
+    override fun deepVisitNotContained(visitor: org.kevoree.modeling.api.util.ModelVisitor){ visit(visitor,true,false,true); }
+
+    override fun deepVisitContained(visitor: org.kevoree.modeling.api.util.ModelVisitor){ visit(visitor,true,true,false); }
+
+    override fun deepVisitReferences(visitor: org.kevoree.modeling.api.util.ModelVisitor){ visit(visitor,true,true,true); }
+
 }
