--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -348,6 +348,10 @@ override fun select(query : String) : List<org.kevoree.modeling.api.KMFContainer
         if(query == path()){
             return this
         }
+        if(path()=="/" && query.startsWith("/")){
+            return findByPath(query.substring(1))
+        }
+
         val firstSepIndex = query.indexOf('[')
         if(firstSepIndex == -1){
              if(query.isEmpty()){return this}else{return null}
