modify JSON format to respect root association and ensure Persistence load

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
@@ -16,6 +16,12 @@ import $helper.fqn($ctx, $class);
 
 override fun getVersion() : String { return "${modelVersion}" }
 
+#if(!$ctx.persistence)
+    override fun lookup(path: String): org.kevoree.modeling.api.KMFContainer? {
+        return null
+    }
+#end
+
 #if($ctx.persistence)
 override val elem_cache: MutableMap<String, org.kevoree.modeling.api.KMFContainer> = java.util.concurrent.ConcurrentHashMap<String, org.kevoree.modeling.api.KMFContainer>()
 override val modified_elements: MutableMap<String, org.kevoree.modeling.api.KMFContainer> = java.util.concurrent.ConcurrentHashMap<String, org.kevoree.modeling.api.KMFContainer>()
